--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
   <canvas id="gameCanvas" width="400" height="600"></canvas>
+
+  <div class="donation-container">
+    <a href="https://paypal.me/Wassim805" target="_blank" rel="noopener noreferrer" class="donation-button">
+      ☕ Support Me on PayPal
+    </a>
+  </div>
+
   <script src="game.js"></script>
 </body>
 </html>
